# iac

./: AUTHORS.TXT  CMakeLists.txt  README.md  Release.txt  build.sh  build_x86.sh  iac.pc.in
dep_codecs/: patch_script.sh
dep_codecs/lib/: libfdk-aac.la  libopus.la
dep_external/lib/: fftw3f.lib  flatccrt_x64.lib
include/: IAMF_decoder.h  IAMF_defines.h  IAMF_encoder.h  immersive_audio.h  immersive_audio_decoder.h  immersive_audio_defines.h  immersive_audio_encoder.h  immersive_audio_encoder_defines.h
src/common/: IAMF_debug_dev.h  audio_defines.h  audio_true_peak_meter.c  audio_true_peak_meter.h  bitstreamrw.c  bitstreamrw.h  fixedp11_5.c  fixedp11_5.h  opus_extension.h
src/iac_dec/: audio_effect_compressor.c  audio_effect_compressor.h  audio_effect_compressor2.c  audio_effect_compressor2.h  audio_effect_peak_limiter.c  audio_effect_peak_limiter.h  channel.h  demixer.c  demixer.h  drc_processor.c  drc_processor.h  immersive_audio_codec.h  immersive_audio_core_decoder.c  immersive_audio_core_decoder.h  immersive_audio_debug.h  immersive_audio_decoder.c  immersive_audio_decoder_private.h  immersive_audio_metadata.c  immersive_audio_metadata.h  immersive_audio_obu.c  immersive_audio_obu.h  immersive_audio_types.h  immersive_audio_utils.c  immersive_audio_utils.h  queue.c  queue.h
src/iac_enc/: audio_loud_meter.c  audio_loud_meter.h  biquad.c  biquad.h  downmixer.c  downmixer.h  gaindown.c  gaindown.h  immersive_audio_core_encoder.c  immersive_audio_encoder.c  immersive_audio_encoder_private.h  intermediate_file_context.c  intermediate_file_context.h  metadata_write.h  obuwrite.c  obuwrite.h  queue_plus.c  scalable_factor.c  scalable_factor.h  scalable_format.c  scalable_format.h  upmixer.c  upmixer.h  wavreader2.c  wavreader2.h  wavwriter2.c  wavwriter2.h
src/iac_enc/dmpd/: CMakeLists.txt  README.md  dmpd.pc.in
src/iac_enc/dmpd/asc/: CMakeLists.txt  Readme.txt
src/iac_enc/dmpd/asc/include/: ia_asc.h  queue_plus.h
src/iac_enc/dmpd/asc/model_convert_script/: Readme.md  convert_pb.py  convert_tflite.py
src/iac_enc/dmpd/asc/models/: sunset_r2.2.tflite
src/iac_enc/dmpd/asc/scripts/: build.sh
src/iac_enc/dmpd/asc/src/: asc_common_bs.c  asc_common_bs.h  asc_dn.c  asc_dn.h  asc_test.c  common.c  effect_stft_abs.c  interpreter.c  interpreter.h  kernel.c  kernel.h  mel_matrix.c  opresolver.c  opresolver.h  sample_d_data.c  sample_e_data.c  subgraph.c  subgraph.h  tflite.c  transpose_1.c  transpose_3.c  util.c  util.h
src/iac_enc/dmpd/asc/src/kernels/: abs.c  add.c  arg_max.c  concatenation.c  conv2d.c  depthwise_conv_2d.c  div.c  fully_connected.c  max_pool_2d.c  mean.c  mirror_pad.c  mul.c  neg.c  relu.c  reshape.c  rsqrt.c  softmax.c  sqrt.c  square_difference.c  strided_slice.c  sub.c  sum.c  tanh.c  transpose_conv.c
src/iac_enc/dmpd/heq/: CMakeLists.txt  Readme.txt  build.sh  common.h  utils.c  utils.h  wave.c
src/iac_enc/dmpd/heq/include/: ia_heq.h
src/iamf_dec/: IAMF_OBU.c  IAMF_OBU.h  IAMF_codec.h  IAMF_core_decoder.c  IAMF_core_decoder.h  IAMF_debug.h  IAMF_debug_dev.h  IAMF_decoder.c  IAMF_decoder_private.h  IAMF_types.h  IAMF_utils.c  IAMF_utils.h  ae_rdr.h  audio_effect_peak_limiter.c  audio_effect_peak_limiter.h  bitstream.c  bitstream.h  demixer.c  demixer.h  h2m_rdr.c  m2m_rdr.c  speex_resampler.h
src/iamf_enc/: IAMF_core_encoder.c  IAMF_encoder.c  IAMF_encoder_private.h  audio_loud_meter.c  audio_loud_meter.h  biquad.c  biquad.h  downmixer.c  downmixer.h  gaindown.c  gaindown.h  intermediate_file_context.c  intermediate_file_context.h  metadata_write.h  obu_multiway_tree.c  obu_multiway_tree.h  obuwrite.c  obuwrite.h  pcmconvert.c  pcmconvert.h  queue_plus.c  queue_plus.h  scalable_factor.c  scalable_factor.h  (+8 more)
src/iamf_enc/dmpd/asc/: CMakeLists.txt  Readme.txt
src/iamf_enc/dmpd/asc/3rdlib/: flatccrt.lib
src/iamf_enc/dmpd/asc/include/: ia_asc.h  iamf_asc.h  queue_plus.h
src/iamf_enc/dmpd/asc/model_convert_script/: Readme.md  convert_pb.py  convert_tflite.py
src/iamf_enc/dmpd/asc/resampler/: asc_resample.c  asc_resampler.h
src/iamf_enc/dmpd/asc/src/: asc_common_bs.c  asc_common_bs.h  asc_dn.c  asc_dn.h  asc_test.c  builtin_op_data.h  common.h  defs.h  interpreter.c  interpreter.h  kernel.c  kernel.h  opresolver.c  opresolver.h  stft_abs.c  subgraph.c  subgraph.h  tflite.fbs  util.c  util.h  wave.c  wave.h
src/iamf_enc/dmpd/asc/src/kernels/: add.c  concatenation.c  conv2d.c  depthwise_conv_2d.c  div.c  fully_connected.c  max_pool_2d.c  mean.c  mirror_pad.c  mul.c  neg.c  relu.c  reshape.c  rsqrt.c  sqrt.c  square_difference.c  sub.c  sum.c  tanh.c  transpose_conv.c
src/iamf_enc/dmpd/heq/: CMakeLists.txt  DHE.c  DHE.h  Readme.txt  common.h  utils.c  utils.h  wave.c  wave.h
src/iamf_enc/dmpd/heq/include/: ia_heq.h  iamf_heq.h  queue_plus.h
test/tools/encode2mp4/: CMakeLists.txt  a2b_endian.h  bitstreamrw.h  main.c  mp4mux.c  mp4mux.cpp  mp4mux.h  obuwrite.c  obuwrite.h  opus_header.c  opus_header.h  progressbar.c  progressbar.h  test_channel_group_encode.vcxproj  test_channel_group_encode.vcxproj.filters  wavreader.h  wavwriter.c  wavwriter.h
test/tools/iamfpackager/: CMakeLists.txt  a2b_endian.h  aac_header.h  bitstreamrw.c  bitstreamrw.h  cJSON.c  cJSON.h  dmemory.c  dmemory.h  iamf_config_b.json  iamf_config_s.json  main.c  mix_config.json  mix_config_b.json  mix_config_s.json  mp4mux.c  mp4mux.h  opus_header.h  progressbar.c  progressbar.h  wavreader.c  wavreader.h  wavwriter.c  wavwriter.h
test/tools/mp4iacplay/: CMakeLists.txt
test/tools/mp4iacplay/include/: a2b_endian.h  atom.h  iac_header.h  mp4demux.h  mp4iacpar.h
test/tools/mp4iacplay/player/: mp4iacplayer.c
test/tools/mp4iacplay/src/: atom.c  dmemory.c  iac_header.c  mp4demux.c  mp4iacpar.c
test/tools/mp4opusplay/: CMakeLists.txt  test_channel_group_decode.vcxproj  test_channel_group_decode.vcxproj.filters
test/tools/mp4opusplay/include/: atom.h  bitstreamrw.h  dmemory.h  mp4opuspar.h  opus_header.h
test/tools/mp4opusplay/player/: mp4opusplayer.c
test/tools/mp4opusplay/src/: atom.c  bitstreamrw.c  mp4demux.c  mp4opuspar.c  opus_header.c  wavwriter.c
(+776 files in other folders)
